# hdbc-mysql

./: .gitignore  .hgtags  ChangeLog  HDBC-mysql.buildinfo.in  HDBC-mysql.cabal  NOTES  README.md  Setup.hs  Setup.lhs  Test.hs  configure  configure.ac
Database/HDBC/: MySQL.hs
Database/HDBC/MySQL/: Connection.hsc  RTS.hsc
testsrc/: SpecificDB.hs  SpecificDBTests.hs  TestMisc.hs  TestSbasics.hs  Testbasics.hs
