Name:             HDBC-mysql
Category:         Database
Synopsis:         MySQL driver for HDBC
Version:          0.6.6.4
Stability:        Experimental
Maintainer:       Ryan Mulligan <ryan@ryantm.com>
Author:           Chris Waterson
Copyright:        2009-2010 Chris Waterson, 2011 MailRank
License:          LGPL
License-file:     COPYING
Homepage:         https://github.com/ryantm/hdbc-mysql
Bug-Reports:      https://github.com/ryantm/hdbc-mysql/issues
Build-Type:       Custom
Tested-with:      GHC
Cabal-Version:    >= 1.8
Description:
  This package provides a MySQL driver for HDBC, implemented via
  bindings to the C @mysqlclient@ library.
extra-source-files:
  ChangeLog
  README.markdown

library
  Exposed-modules:  Database.HDBC.MySQL
  Other-modules:
    Database.HDBC.MySQL.Connection
    Database.HDBC.MySQL.RTS
  Build-Depends:
    HDBC >= 2.1.0,
    base >= 2 && < 4.9,
    bytestring,
    time,
    utf8-string
  ghc-options:      -Wall
  Extra-Libraries: mysqlclient

source-repository head
  type:     git
  location: https://github.com/ryantm/hdbc-mysql
