name:             HDBC-mysql
category:         Database
synopsis:         MySQL driver for HDBC
version:          1.0.0.0
maintainer:       Ryan Mulligan <ryan@ryantm.com>
author:           Chris Waterson
copyright:        2009-2010 Chris Waterson, 2011 MailRank, 2020 Ryan Mulligan, et al.
license:          LGPL
license-file:     COPYING
homepage:         http://github.com/ryantm/hdbc-mysql
bug-reports:      http://github.com/ryantm/hdbc-mysql/issues
build-type:       Custom
tested-with:      GHC
cabal-version:    >= 1.24
description:
            This package provides a MySQL driver for HDBC, implemented via
            bindings to the C @mysqlclient@ library.
extra-source-files:
                   ChangeLog
                   README.md

custom-setup
  setup-depends:
                base >= 4.9 && < 5,
                Cabal >= 1.24

flag debug
  description: Enable debug support
  default:     False

library
  exposed-modules:  Database.HDBC.MySQL
  other-modules:
                Database.HDBC.MySQL.Connection
                Database.HDBC.MySQL.RTS
  build-depends:
                HDBC >= 2.1.0,
                base >= 4.9 && < 5,
                bytestring,
                time,
                utf8-string
  ghc-options: -Wall
  if flag(debug)
    cpp-options:    -DDEBUG
  extra-libraries: z ssl mysqlclient
  default-language: Haskell2010

source-repository head
  type:     git
  location: http://github.com/ryantm/hdbc-mysql
